fix mobile overflow

--- a/css/map.css
+++ b/css/map.css
@@ -1,6 +1,5 @@
 body{
     background:url(../image/woodtable.jpg);
-
 }
 
 #divLoading{
@@ -42,9 +41,10 @@ body{
 }
 
 #button{
-    position: absolute;
-    width:100%;
-    height:100%;
+    position: fixed;
+    box-sizing: border-box;
+    width:0px;
+    height:0px;
 }
 
 
